--- a/package.json
+++ b/package.json
@@ -1,14 +1,43 @@
 {
   "name": "@taystack/react-ui",
-  "version": "0.1.01",
-  "main": "<rootDir>/dist/index.js",
-  "keywords": ["react", "ui", "card"],
-  "author": "Taylor Stackpole (@taystack)",
-  "files": ["<rootDir>/dist"],
   "license": "MIT",
+  "author": "Taylor Stackpole (@taystack)",
+  "version": "0.1.7",
+  "main": "dist/index.js",
+  "keywords": [
+    "react",
+    "ui",
+    "card"
+  ],
+  "scripts": {
+    "start": "start-storybook -p 6006",
+    "build": ". ./scripts/build.sh",
+    "build-package": ". ./scripts/build_package.sh",
+    "build-storybook": "./node_modules/.bin/build-storybook -- --dry-run -c .storybook",
+    "deploy": ". ./scripts/deploy.sh",
+    "test": "./node_modules/.bin/jest --coverage",
+    "publish-coverage": ". ./scripts/publish_coverage.sh",
+    "publish-package": ". ./scripts/publish_package.sh"
+  },
+  "files": ["dist"],
   "dependencies": {
+    "chart.js": "^2.7.3",
+    "react-chartjs-2": "^2.7.4"
+  },
+  "peerDependencies": {
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
     "@babel/core": "7.1.6",
+    "@babel/plugin-syntax-json-strings": "^7.2.0",
+    "@storybook/addon-actions": "^4.1.7",
+    "@storybook/addon-links": "^4.1.7",
+    "@storybook/addons": "^4.1.7",
+    "@storybook/cli": "^4.1.7",
     "@storybook/react": "^4.1.7",
+    "@storybook/storybook-deployer": "^2.8.1",
     "@svgr/webpack": "2.4.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
@@ -19,10 +48,12 @@
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
-    "chart.js": "^2.7.3",
+    "codecov": "^3.1.0",
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
     "eslint": "5.6.0",
     "eslint-config-react-app": "^3.0.6",
     "eslint-loader": "2.1.1",
@@ -36,6 +67,7 @@
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
     "jest": "23.6.0",
+    "jest-enzyme": "^7.0.1",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
     "mini-css-extract-plugin": "0.4.3",
@@ -45,9 +77,9 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.3.1",
     "postcss-safe-parser": "4.0.1",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-app-polyfill": "^0.2.0",
-    "react-chartjs-2": "^2.7.4",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
     "resolve": "1.8.1",
@@ -56,17 +88,10 @@
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
     "webpack": "4.19.1",
+    "webpack-cli": "^3.2.1",
     "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "3.6.3"
-  },
-  "scripts": {
-    "test": "./node_modules/.bin/jest --coverage",
-    "start": "start-storybook -p 6006",
-    "build": ". ./scripts/build.sh",
-    "dry-run": "./node_modules/.bin/build-storybook -- --dry-run -c .storybook",
-    "deploy": ". ./scripts/deploy.sh",
-    "publish-coverage": ". ./scripts/publish_coverage.sh"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -129,20 +154,6 @@
     "presets": [
       "react-app"
     ]
-  },
-  "devDependencies": {
-    "@storybook/addon-actions": "^4.1.7",
-    "@storybook/addon-links": "^4.1.7",
-    "@storybook/addons": "^4.1.7",
-    "@storybook/cli": "^4.1.7",
-    "@storybook/react": "^4.1.7",
-    "@storybook/storybook-deployer": "^2.8.1",
-    "codecov": "^3.1.0",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
-    "jest-enzyme": "^7.0.1",
-    "prop-types": "^15.6.2",
-    "webpack-cli": "^3.2.1"
   },
   "storybook-deployer": {
     "gitUsername": "taystack",
